UP manifest.json - Add gear categorization
GEAR-5440

--- a/manifest.json
+++ b/manifest.json
@@ -4,15 +4,35 @@
   "description": "Run QA metrics (displacement, signal spikes) to create a quality assurance report (png) for an fMRI NIfTI using CNI/NIMS code.",
   "maintainer": "Michael Perry <lmperry@stanford.edu>",
   "author": "Robert F. Dougherty, Hua Wu",
-  "url": "https://cni.stanford.edu/wiki/QA",
-  "source": "https://github.com/cni/cni-qa-report-fmri",
+  "url": "https://github.com/cni/cni-qa-report-fmri",
+  "source": "https://cni.stanford.edu/wiki/QA",
   "license": "Apache-2.0",
   "flywheel": "0",
   "version": "1.0.4",
   "custom": {
     "docker-image": "stanfordcni/cni-qa-report-fmri:1.0.4",
     "flywheel": {
-      "suite": "Stanford CNI"
+      "suite": "",
+      "classification": {
+        "species": [
+          ""
+        ],
+        "organ": [
+          ""
+        ],
+        "therapeutic_area": [
+          ""
+        ],
+        "modality": [
+          ""
+        ],
+        "function": [
+          ""
+        ]
+      }
+    },
+    "gear-builder": {
+      "category": "analysis"
     }
   },
   "config": {
