--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Run QA metrics (displacement, signal spikes) to create a quality assurance report (png) for an fMRI NIfTI using CNI/NIMS code.",
   "maintainer": "Michael Perry <lmperry@stanford.edu>",
   "author": "Robert F. Dougherty, Hua Wu",
-  "url": "https://github.com/cni/cni-qa-report-fmri",
+  "url": "https://github.com/scitran-apps/qa-report-fmri",
   "source": "https://cni.stanford.edu/wiki/QA",
   "license": "Apache-2.0",
   "flywheel": "0",
@@ -12,27 +12,28 @@
   "custom": {
     "docker-image": "stanfordcni/cni-qa-report-fmri:1.0.4",
     "flywheel": {
-      "suite": "",
+      "suite": "Image Processing",
       "classification": {
         "species": [
-          ""
+          "Human"
         ],
         "organ": [
-          ""
+          "Brain"
         ],
         "therapeutic_area": [
-          ""
+          "Neurology",
+          "Psychiatry/Psychology"
         ],
         "modality": [
-          ""
+          "MR"
         ],
         "function": [
-          ""
+          "Image Processing - Functional"
         ]
       }
     },
     "gear-builder": {
-      "category": "analysis"
+      "category": "qa"
     }
   },
   "config": {
